--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,12 @@
 apply plugin: 'java'
-apply pluging: 'application'
+apply plugin: 'application'
 
-mainClassName = "MyFirstProgram"
+mainClassName = "com.mihasud.sandbox.MyFirstProgram"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.testng:testng:6.14.2'
+}
